lat alignement fix

--- a/blocks/dealer-locator/dealer-locator.css
+++ b/blocks/dealer-locator/dealer-locator.css
@@ -711,9 +711,10 @@ main .section.dealer-locator-container > div {
     width: 100%
 }
 
+.dealer-locator #map .gmnoprint + .gm-style-cc,
 .dealer-locator #map .gmnoprint {
-    top: 0;
-    margin-top: 45px
+  top: 0;
+  margin-top: 45px;
 }
 
 @media (max-width: 992px) {
